--- a/index.html
+++ b/index.html
@@ -2,27 +2,23 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>My Site</title>
+  <title>Tradesop</title>
   <style>
     body {
       background: #111;
-      color: white;            /* <-- so alt text is visible */
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      flex-direction: column;
     }
     img {
       max-width: 95vw;
       max-height: 95vh;
-      border: 2px solid white; /* <-- helps show image box if it loads tiny */
     }
   </style>
 </head>
 <body>
-  <div>Loading image…</div>
   <img src="tradesman-van.png" alt="Tradesman with Tools and Van">
 </body>
 </html>
