--- a/index.html
+++ b/index.html
@@ -1,24 +1,273 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Tradesop</title>
+  <title>Tradesop – Operations Software for the Trades</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Tradesop – simple, powerful operations software for trades businesses. Jobs, parts, scheduling, and field techs all in one place." />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
+    * { box-sizing: border-box; }
     body {
-      background: #111;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
       margin: 0;
+      font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top, #222 0, #05070a 45%, #030408 100%);
+      color: #f5f5f5;
     }
-    img {
-      max-width: 95vw;
-      max-height: 95vh;
+    a { color: inherit; text-decoration: none; }
+    .page { min-height: 100vh; display: flex; flex-direction: column; }
+    header {
+      padding: 16px 24px;
+      border-bottom: 1px solid rgba(255,255,255,0.05);
+      backdrop-filter: blur(10px);
+      position: sticky; top: 0; z-index: 10;
+    }
+    .nav-inner {
+      max-width: 1100px; margin: 0 auto;
+      display: flex; align-items: center; justify-content: space-between; gap: 16px;
+    }
+    .brand { display: flex; align-items: center; gap: 10px; }
+    .brand img {
+      width: 44px; height: 44px; border-radius: 10px; object-fit: cover;
+      border: 2px solid rgba(255,255,255,0.15);
+    }
+    .brand-text { display: flex; flex-direction: column; line-height: 1.1; }
+    .brand-title { font-weight: 700; letter-spacing: 0.03em; font-size: 18px; text-transform: uppercase; }
+    .brand-sub { font-size: 12px; opacity: 0.7; }
+    .nav-actions a.login-link {
+      padding: 8px 16px; border-radius: 999px;
+      border: 1px solid rgba(255,255,255,0.35);
+      font-size: 14px; font-weight: 500;
+      transition: background 0.15s ease, transform 0.1s ease, box-shadow 0.15s ease;
+    }
+    .nav-actions a.login-link:hover {
+      background: rgba(255,255,255,0.08);
+      box-shadow: 0 0 12px rgba(0,0,0,0.6);
+      transform: translateY(-1px);
+    }
+    main { flex: 1; }
+    .hero {
+      max-width: 1100px; margin: 32px auto 40px; padding: 0 24px;
+      display: grid; grid-template-columns: minmax(0, 1.1fr) minmax(0, 1fr);
+      gap: 32px; align-items: center;
+    }
+    @media (max-width: 840px) { .hero { grid-template-columns: minmax(0, 1fr); } }
+    .hero-tag {
+      display: inline-flex; align-items: center; gap: 8px;
+      padding: 4px 10px; border-radius: 999px;
+      font-size: 11px; text-transform: uppercase; letter-spacing: 0.12em;
+      background: rgba(15, 118, 255, 0.14); border: 1px solid rgba(56, 189, 248, 0.4);
+      color: #e0f2fe; margin-bottom: 12px;
+    }
+    .hero-tag-dot { width: 6px; height: 6px; border-radius: 999px; background: #4ade80; box-shadow: 0 0 8px rgba(74, 222, 128, 0.8); }
+    .hero-title { font-size: clamp(30px, 4vw, 40px); font-weight: 700; margin: 0 0 10px; }
+    .hero-title span.accent {
+      background: linear-gradient(90deg, #38bdf8, #22c55e, #a855f7);
+      -webkit-background-clip: text; color: transparent;
+    }
+    .hero-subtitle { font-size: 15px; line-height: 1.6; opacity: 0.84; max-width: 520px; margin-bottom: 20px; }
+    .hero-actions { display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 18px; }
+    .btn {
+      display: inline-flex; align-items: center; justify-content: center; gap: 8px;
+      padding: 11px 20px; border-radius: 999px; font-size: 14px; font-weight: 600;
+      border: none; cursor: pointer;
+      transition: transform 0.1s ease, box-shadow 0.15s ease, background 0.15s ease, border-color 0.15s ease;
+    }
+    .btn-primary {
+      background: linear-gradient(135deg, #0ea5e9, #22c55e);
+      color: #020617; box-shadow: 0 18px 40px rgba(15, 23, 42, 0.9);
+    }
+    .btn-primary:hover { transform: translateY(-1px); box-shadow: 0 24px 55px rgba(15, 23, 42, 1); }
+    .btn-ghost {
+      background: transparent; color: #e5e7eb;
+      border: 1px solid rgba(148, 163, 184, 0.7);
+    }
+    .btn-ghost:hover {
+      background: rgba(15,23,42,0.85);
+      border-color: rgba(248, 250, 252, 0.7);
+      transform: translateY(-1px);
+      box-shadow: 0 14px 38px rgba(15, 23, 42, 0.85);
+    }
+    .hero-footnote { font-size: 12px; opacity: 0.7; }
+    .hero-image-wrapper { position: relative; display: flex; align-items: center; justify-content: center; }
+    .hero-image-glow {
+      position: absolute; width: 115%; height: 115%;
+      background: radial-gradient(circle at 20% 0%, rgba(56,189,248,0.2), transparent 55%),
+                  radial-gradient(circle at 80% 100%, rgba(52,211,153,0.24), transparent 55%);
+      filter: blur(16px); opacity: 0.9; pointer-events: none;
+    }
+    .hero-card {
+      position: relative; border-radius: 22px; padding: 10px;
+      background: radial-gradient(circle at top left, rgba(15,23,42,0.9), rgba(15,23,42,0.96));
+      border: 1px solid rgba(148, 163, 184, 0.3);
+      box-shadow: 0 10px 30px rgba(15, 23, 42, 0.85), 0 0 0 1px rgba(15, 23, 42, 0.8);
+      max-width: 420px; width: 100%;
+    }
+    .hero-card img { display: block; width: 100%; border-radius: 16px; object-fit: cover; }
+    .hero-card-caption {
+      padding: 10px 4px 4px; font-size: 11px; text-transform: uppercase; letter-spacing: 0.12em; opacity: 0.65;
+    }
+    .section { max-width: 1100px; margin: 0 auto 36px; padding: 0 24px; }
+    .section h2 { font-size: 20px; margin-bottom: 8px; }
+    .section p.section-lead { font-size: 14px; opacity: 0.78; max-width: 560px; }
+    .features-grid {
+      display: grid; grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 18px; margin-top: 18px;
+    }
+    @media (max-width: 960px) { .features-grid { grid-template-columns: repeat(2, minmax(0, 1fr)); } }
+    @media (max-width: 640px) { .features-grid { grid-template-columns: minmax(0, 1fr); } }
+    .feature-card {
+      padding: 14px; border-radius: 14px;
+      background: rgba(15,23,42,0.9);
+      border: 1px solid rgba(30,64,175,0.9);
+      box-shadow: 0 10px 25px rgba(15,23,42,0.7);
+    }
+    .feature-title { font-size: 14px; margin-bottom: 4px; font-weight: 600; }
+    .feature-desc { font-size: 13px; opacity: 0.8; line-height: 1.5; }
+    .contact-card {
+      margin-top: 18px; padding: 16px;
+      border-radius: 14px; background: rgba(15,23,42,0.92);
+      border: 1px solid rgba(148, 163, 184, 0.5);
+      max-width: 520px; font-size: 14px;
+    }
+    .contact-row { display: flex; flex-wrap: wrap; gap: 16px; margin-top: 8px; }
+    .contact-item { min-width: 200px; }
+    .label { font-size: 11px; text-transform: uppercase; letter-spacing: 0.12em; opacity: 0.6; margin-bottom: 2px; }
+    .value { font-size: 14px; }
+    footer {
+      border-top: 1px solid rgba(15,23,42,0.95);
+      padding: 14px 24px 18px;
+      font-size: 12px; opacity: 0.7;
+    }
+    .footer-inner {
+      max-width: 1100px; margin: 0 auto;
+      display: flex; justify-content: space-between; flex-wrap: wrap; gap: 8px;
     }
   </style>
 </head>
 <body>
-  <img src="tradesman-van.png" alt="Tradesman with Tools and Van">
+  <div class="page">
+    <header>
+      <div class="nav-inner">
+        <div class="brand">
+          <img src="tradesman-van.png" alt="Tradesop logo – tradesman with tools and van">
+          <div class="brand-text">
+            <span class="brand-title">TRADESOP</span>
+            <span class="brand-sub">Operations for the trades</span>
+          </div>
+        </div>
+        <div class="nav-actions">
+          <a class="login-link" href="/login">Log in</a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div>
+          <div class="hero-tag">
+            <span class="hero-tag-dot"></span>
+            <span>Built for field service teams</span>
+          </div>
+          <h1 class="hero-title">
+            Operations that <span class="accent">actually make sense</span>.
+          </h1>
+          <p class="hero-subtitle">
+            Tradesop keeps your jobs, parts, scheduling, and field techs in one place.
+            Simple enough for the field, powerful enough for the office.
+          </p>
+          <div class="hero-actions">
+            <a href="/login" class="btn btn-primary">Log in to Tradesop</a>
+            <a href="#why-tradesop" class="btn btn-ghost">Learn more</a>
+          </div>
+          <div class="hero-footnote">
+            Use your existing Tradesop credentials to sign in. Need an account? Contact support below.
+          </div>
+        </div>
+
+        <div class="hero-image-wrapper">
+          <div class="hero-image-glow"></div>
+          <div class="hero-card">
+            <img src="tradesman-van.png" alt="Tradesman with tools and van" />
+            <div class="hero-card-caption">
+              Designed for real-world trades work — not just office admins.
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="why-tradesop">
+        <h2>Why Tradesop?</h2>
+        <p class="section-lead">
+          Tradesop is being built from the perspective of someone who’s actually in the field.
+          No bloated menus, no mystery buttons — just the tools you need to run calls, track parts,
+          and keep jobs moving.
+        </p>
+
+        <div class="features-grid">
+          <div class="feature-card">
+            <div class="feature-title">Jobs & Work Orders</div>
+            <div class="feature-desc">Create, schedule, and complete work orders quickly. See what’s active, waiting, or complete.</div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Parts & Inventory</div>
+            <div class="feature-desc">Track parts by truck or warehouse and stop losing time hunting for materials.</div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Scheduling That Works</div>
+            <div class="feature-desc">See your day at a glance and drag, drop, and adjust jobs easily.</div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Tech-Friendly UI</div>
+            <div class="feature-desc">Clean, simple, no-clutter screens built for technicians first.</div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Owner & Office Tools</div>
+            <div class="feature-desc">See what’s booked, what’s profitable, and what’s stuck — instantly.</div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Built to Grow</div>
+            <div class="feature-desc">Start simple. Add advanced features and customer portals as you grow.</div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section" id="contact">
+        <h2>Contact & Support</h2>
+        <p class="section-lead">
+          Need help with your Tradesop account or have questions about getting started? Reach out using the info below.
+        </p>
+
+        <div class="contact-card">
+          <div class="contact-row">
+            <div class="contact-item">
+              <div class="label">Support Email</div>
+              <div class="value"><a href="mailto:support@tradesop.com">support@tradesop.com</a></div>
+            </div>
+            <div class="contact-item">
+              <div class="label">Phone</div>
+              <div class="value">(555) 123-4567</div>
+            </div>
+          </div>
+          <div style="margin-top: 10px; font-size: 13px; opacity: 0.8;">
+            For access requests or login issues, include your company name and a brief description of the problem.
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer-inner">
+        <span>© <span id="year"></span> Tradesop. All rights reserved.</span>
+        <span>Tradesop – Operations software for real trades and service businesses.</span>
+      </div>
+    </footer>
+  </div>
+
+  <script>document.getElementById("year").textContent = new Date().getFullYear();</script>
 </body>
 </html>
