--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     }
     .brand { display: flex; align-items: center; gap: 10px; }
     .brand img {
-      width: 42px; height: 42px;
+      width: 42px; 
+      height: 42px;
       border-radius: 8px;
       object-fit: cover;
       border: 2px solid rgba(255,255,255,0.15);
@@ -72,10 +73,7 @@
       background: rgba(15, 118, 255, 0.14); border: 1px solid rgba(56, 189, 248, 0.4);
       color: #e0f2fe; margin-bottom: 12px;
     }
-    .hero-tag-dot {
-      width: 6px; height: 6px; border-radius: 999px;
-      background: #4ade80; box-shadow: 0 0 8px rgba(74, 222, 128, 0.8);
-    }
+    .hero-tag-dot { width: 6px; height: 6px; border-radius: 999px; background: #4ade80; box-shadow: 0 0 8px rgba(74, 222, 128, 0.8); }
     .hero-title { font-size: clamp(30px, 4vw, 40px); font-weight: 700; margin: 0 0 10px; }
     .hero-title span.accent {
       background: linear-gradient(90deg, #38bdf8, #22c55e, #a855f7);
@@ -96,8 +94,7 @@
     }
     .btn-primary:hover { transform: translateY(-1px); box-shadow: 0 24px 55px rgba(15, 23, 42, 1); }
     .btn-ghost {
-      background: transparent; color: #e5e7eb;
-      border: 1px solid rgba(148,163,184,0.7);
+      background: transparent; color: #e5e7eb; border: 1px solid rgba(148,163,184,0.7);
     }
     .btn-ghost:hover {
       background: rgba(15,23,42,0.85); border-color: rgba(248,250,252,0.7);
@@ -123,20 +120,40 @@
       border-radius: 16px; object-fit: cover;
     }
 
-    /* ===== Section Layout ===== */
-    .section { max-width: 1100px; margin: 0 auto 36px; padding: 0 24px; }
-    .section h2 { font-size: 20px; margin-bottom: 8px; }
-    .section p.section-lead { font-size: 14px; opacity: 0.78; max-width: 600px; }
+    /* ===== Sections ===== */
+    .section {
+      max-width: 1100px;
+      margin: 0 auto 36px;
+      padding: 0 24px;
+    }
+    .section h2 {
+      font-size: 20px;
+      margin-bottom: 8px;
+    }
+    .section p.section-lead {
+      font-size: 14px;
+      opacity: 0.78;
+      max-width: 600px;
+    }
 
     /* ===== Contact ===== */
     .contact-card {
-      margin-top: 18px; padding: 16px;
-      border-radius: 14px; background: rgba(15,23,42,0.92);
+      margin-top: 18px;
+      padding: 16px;
+      border-radius: 14px;
+      background: rgba(15,23,42,0.92);
       border: 1px solid rgba(148, 163, 184, 0.5);
-      max-width: 520px; font-size: 14px;
+      max-width: 520px;
+      font-size: 14px;
     }
     .contact-item { margin-bottom: 12px; }
-    .label { font-size: 11px; text-transform: uppercase; letter-spacing: 0.12em; opacity: 0.6; margin-bottom: 2px; }
+    .label {
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      opacity: 0.6;
+      margin-bottom: 2px;
+    }
     .value { font-size: 14px; }
 
     /* ===== Footer ===== */
@@ -156,7 +173,7 @@
     <header>
       <div class="nav-inner">
         <div class="brand">
-          <!-- Same image used as logo -->
+          <!-- SAME ORIGINAL IMAGE -->
           <img src="tradesman-van.png" alt="Tradesop logo">
           <div class="brand-text">
             <span class="brand-title">TRADESOP</span>
@@ -198,7 +215,7 @@
         <div class="hero-image-wrapper">
           <div class="hero-image-glow"></div>
           <div class="hero-card">
-            <!-- Same image used for hero -->
+            <!-- SAME ORIGINAL IMAGE -->
             <img src="tradesman-van.png" alt="Tradesman with tools and van" />
             <div class="hero-card-caption">
               Designed for real-world trades work — not just office admins.
@@ -218,7 +235,9 @@
 
       <section class="section" id="contact">
         <h2>Contact & Support</h2>
-        <p class="section-lead">Need help or interested in early access? Reach out below.</p>
+        <p class="section-lead">
+          Need help or interested in early access? Reach out below.
+        </p>
 
         <div class="contact-card">
           <div class="contact-item">
