--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     }
     a { color: inherit; text-decoration: none; }
     .page { min-height: 100vh; display: flex; flex-direction: column; }
-
-    /* ===== Header ===== */
     header {
       padding: 16px 24px;
       border-bottom: 1px solid rgba(255,255,255,0.05);
@@ -34,17 +32,12 @@
     }
     .brand { display: flex; align-items: center; gap: 10px; }
     .brand img {
-      width: 42px; 
-      height: 42px;
-      border-radius: 8px;
-      object-fit: cover;
+      width: 44px; height: 44px; border-radius: 10px; object-fit: cover;
       border: 2px solid rgba(255,255,255,0.15);
-      background: #0f172a;
     }
     .brand-text { display: flex; flex-direction: column; line-height: 1.1; }
     .brand-title { font-weight: 700; letter-spacing: 0.03em; font-size: 18px; text-transform: uppercase; }
     .brand-sub { font-size: 12px; opacity: 0.7; }
-
     .nav-actions a.login-link {
       padding: 8px 16px; border-radius: 999px;
       border: 1px solid rgba(255,255,255,0.35);
@@ -56,8 +49,6 @@
       box-shadow: 0 0 12px rgba(0,0,0,0.6);
       transform: translateY(-1px);
     }
-
-    /* ===== Hero ===== */
     main { flex: 1; }
     .hero {
       max-width: 1100px; margin: 32px auto 40px; padding: 0 24px;
@@ -65,7 +56,6 @@
       gap: 32px; align-items: center;
     }
     @media (max-width: 840px) { .hero { grid-template-columns: minmax(0, 1fr); } }
-
     .hero-tag {
       display: inline-flex; align-items: center; gap: 8px;
       padding: 4px 10px; border-radius: 999px;
@@ -80,13 +70,12 @@
       -webkit-background-clip: text; color: transparent;
     }
     .hero-subtitle { font-size: 15px; line-height: 1.6; opacity: 0.84; max-width: 520px; margin-bottom: 20px; }
-
     .hero-actions { display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 18px; }
     .btn {
       display: inline-flex; align-items: center; justify-content: center; gap: 8px;
       padding: 11px 20px; border-radius: 999px; font-size: 14px; font-weight: 600;
       border: none; cursor: pointer;
-      transition: transform 0.1s ease, box-shadow 0.15s ease, background 0.15s ease;
+      transition: transform 0.1s ease, box-shadow 0.15s ease, background 0.15s ease, border-color 0.15s ease;
     }
     .btn-primary {
       background: linear-gradient(135deg, #0ea5e9, #22c55e);
@@ -94,13 +83,16 @@
     }
     .btn-primary:hover { transform: translateY(-1px); box-shadow: 0 24px 55px rgba(15, 23, 42, 1); }
     .btn-ghost {
-      background: transparent; color: #e5e7eb; border: 1px solid rgba(148,163,184,0.7);
+      background: transparent; color: #e5e7eb;
+      border: 1px solid rgba(148, 163, 184, 0.7);
     }
     .btn-ghost:hover {
-      background: rgba(15,23,42,0.85); border-color: rgba(248,250,252,0.7);
-      transform: translateY(-1px); box-shadow: 0 14px 38px rgba(15, 23, 42, 0.85);
+      background: rgba(15,23,42,0.85);
+      border-color: rgba(248, 250, 252, 0.7);
+      transform: translateY(-1px);
+      box-shadow: 0 14px 38px rgba(15, 23, 42, 0.85);
     }
-
+    .hero-footnote { font-size: 12px; opacity: 0.7; }
     .hero-image-wrapper { position: relative; display: flex; align-items: center; justify-content: center; }
     .hero-image-glow {
       position: absolute; width: 115%; height: 115%;
@@ -112,51 +104,40 @@
       position: relative; border-radius: 22px; padding: 10px;
       background: radial-gradient(circle at top left, rgba(15,23,42,0.9), rgba(15,23,42,0.96));
       border: 1px solid rgba(148, 163, 184, 0.3);
-      box-shadow: 0 10px 30px rgba(15, 23, 42, 0.85);
+      box-shadow: 0 10px 30px rgba(15, 23, 42, 0.85), 0 0 0 1px rgba(15, 23, 42, 0.8);
       max-width: 420px; width: 100%;
     }
-    .hero-card img {
-      display: block; width: 100%;
-      border-radius: 16px; object-fit: cover;
+    .hero-card img { display: block; width: 100%; border-radius: 16px; object-fit: cover; }
+    .hero-card-caption {
+      padding: 10px 4px 4px; font-size: 11px; text-transform: uppercase; letter-spacing: 0.12em; opacity: 0.65;
     }
-
-    /* ===== Sections ===== */
-    .section {
-      max-width: 1100px;
-      margin: 0 auto 36px;
-      padding: 0 24px;
+    .section { max-width: 1100px; margin: 0 auto 36px; padding: 0 24px; }
+    .section h2 { font-size: 20px; margin-bottom: 8px; }
+    .section p.section-lead { font-size: 14px; opacity: 0.78; max-width: 560px; }
+    .features-grid {
+      display: grid; grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 18px; margin-top: 18px;
     }
-    .section h2 {
-      font-size: 20px;
-      margin-bottom: 8px;
+    @media (max-width: 960px) { .features-grid { grid-template-columns: repeat(2, minmax(0, 1fr)); } }
+    @media (max-width: 640px) { .features-grid { grid-template-columns: minmax(0, 1fr); } }
+    .feature-card {
+      padding: 14px; border-radius: 14px;
+      background: rgba(15,23,42,0.9);
+      border: 1px solid rgba(30,64,175,0.9);
+      box-shadow: 0 10px 25px rgba(15,23,42,0.7);
     }
-    .section p.section-lead {
-      font-size: 14px;
-      opacity: 0.78;
-      max-width: 600px;
-    }
-
-    /* ===== Contact ===== */
+    .feature-title { font-size: 14px; margin-bottom: 4px; font-weight: 600; }
+    .feature-desc { font-size: 13px; opacity: 0.8; line-height: 1.5; }
     .contact-card {
-      margin-top: 18px;
-      padding: 16px;
-      border-radius: 14px;
-      background: rgba(15,23,42,0.92);
+      margin-top: 18px; padding: 16px;
+      border-radius: 14px; background: rgba(15,23,42,0.92);
       border: 1px solid rgba(148, 163, 184, 0.5);
-      max-width: 520px;
-      font-size: 14px;
+      max-width: 520px; font-size: 14px;
     }
-    .contact-item { margin-bottom: 12px; }
-    .label {
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      opacity: 0.6;
-      margin-bottom: 2px;
-    }
+    .contact-row { display: flex; flex-wrap: wrap; gap: 16px; margin-top: 8px; }
+    .contact-item { min-width: 200px; }
+    .label { font-size: 11px; text-transform: uppercase; letter-spacing: 0.12em; opacity: 0.6; margin-bottom: 2px; }
     .value { font-size: 14px; }
-
-    /* ===== Footer ===== */
     footer {
       border-top: 1px solid rgba(15,23,42,0.95);
       padding: 14px 24px 18px;
@@ -173,8 +154,7 @@
     <header>
       <div class="nav-inner">
         <div class="brand">
-          <!-- SAME ORIGINAL IMAGE -->
-          <img src="tradesman-van.png" alt="Tradesop logo">
+          <img src="tradesman-van.png" alt="Tradesop logo – tradesman with tools and van">
           <div class="brand-text">
             <span class="brand-title">TRADESOP</span>
             <span class="brand-sub">Operations for the trades</span>
@@ -205,17 +185,20 @@
             <a href="#why-tradesop" class="btn btn-ghost">Learn more</a>
           </div>
 
-          <!-- ⭐ DEVELOPMENT NOTE ⭐ -->
-          <p style="margin-top: 20px; font-size: 13px; opacity: 0.75;">
+          <!-- Development note -->
+          <p style="margin-top: 16px; font-size: 13px; opacity: 0.75;">
             ⚠ <strong>Tradesop is currently in active development.</strong><br>
             Early access will open soon.
           </p>
+
+          <div class="hero-footnote">
+            Use your existing Tradesop credentials to sign in. Need an account? Contact support below.
+          </div>
         </div>
 
         <div class="hero-image-wrapper">
           <div class="hero-image-glow"></div>
           <div class="hero-card">
-            <!-- SAME ORIGINAL IMAGE -->
             <img src="tradesman-van.png" alt="Tradesman with tools and van" />
             <div class="hero-card-caption">
               Designed for real-world trades work — not just office admins.
@@ -224,27 +207,74 @@
         </div>
       </section>
 
-      <section class="section" id="why-tradesop">
+            <section class="section" id="why-tradesop">
         <h2>Why Tradesop?</h2>
         <p class="section-lead">
-          Tradesop is being built from the perspective of someone who’s actually in the field.
-          No bloated menus, no mystery buttons — just the tools you need to run calls, track parts,
-          and keep jobs moving.
+          Tradesop is being built from the perspective of someone who’s actually in the field –
+          whether you work in HVAC, transport refrigeration, trailer repair, plumbing, electrical,
+          or other service trades. No bloated menus, no mystery buttons — just the tools you need
+          to run calls, track parts, and keep jobs moving.
         </p>
-      </section>
 
+        <div class="features-grid">
+          <div class="feature-card">
+            <div class="feature-title">Jobs & Work Orders</div>
+            <div class="feature-desc">
+              Create, schedule, and complete work orders quickly. See what’s active, waiting on
+              parts, or complete — whether it’s a rooftop unit, a reefer, or a trailer repair.
+            </div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Parts & Inventory</div>
+            <div class="feature-desc">
+              Track parts by truck, warehouse, or shop. Coils, compressors, brake kits, valves —
+              know where everything is before you roll a truck.
+            </div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Scheduling That Works</div>
+            <div class="feature-desc">
+              See your day at a glance and drag, drop, and adjust jobs easily. Handle emergency
+              calls, PMs, and multi-stop routes without fighting the software.
+            </div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Tech-Friendly UI</div>
+            <div class="feature-desc">
+              Clean, simple, no-clutter screens built for technicians first. Works for single-tech
+              shops all the way up to multi-truck fleets.
+            </div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Owner & Office Tools</div>
+            <div class="feature-desc">
+              See what’s booked, what’s profitable, and what’s stuck — by customer, equipment,
+              or technician — so you can make decisions quickly.
+            </div>
+          </div>
+          <div class="feature-card">
+            <div class="feature-title">Built to Grow</div>
+            <div class="feature-desc">
+              Start simple with jobs, parts, and scheduling. Add advanced reporting, customer
+              portals, and more as your business and fleet grow.
+            </div>
+          </div>
+        </div>
+      </section>
+      
       <section class="section" id="contact">
         <h2>Contact & Support</h2>
         <p class="section-lead">
-          Need help or interested in early access? Reach out below.
+          Need help with your Tradesop account or have questions about getting started? Reach out using the info below.
         </p>
 
         <div class="contact-card">
           <div class="contact-item">
             <div class="label">Support Email</div>
-            <div class="value">
-              <a href="mailto:support@tradesop.com">support@tradesop.com</a>
-            </div>
+            <div class="value"><a href="mailto:support@tradesop.com">support@tradesop.com</a></div>
+          </div>
+          <div style="margin-top: 10px; font-size: 13px; opacity: 0.8;">
+            For access requests or login issues, include your company name and a brief description of the problem.
           </div>
         </div>
       </section>
@@ -258,8 +288,6 @@
     </footer>
   </div>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById("year").textContent = new Date().getFullYear();</script>
 </body>
 </html>
